Fix permission site origin overflow (#13868)
* Fix permission site origin overflow

* Standardize connect flow a bit

* Another standardization change

* Fix another chip width issue

* Standardize snap install

* Fix lint

* Fix overflow after rebase

--- a/ui/components/ui/site-origin/index.scss
+++ b/ui/components/ui/site-origin/index.scss
@@ -1,4 +1,10 @@
 .site-origin {
+  max-width: 100%;
+
+  .chip {
+    max-width: 100%;
+  }
+
   .chip__left-icon {
     padding: 4px 0 4px 8px;
   }
